--- a/ghostPost/templates/index.html
+++ b/ghostPost/templates/index.html
@@ -11,9 +11,9 @@
     <br>
     <h4>View Content:</h4>
     <div>
-        <button><a href='/'>All Posts</a></button>
-        <button><a href='/boasted/'>Boasts</a></button>
-        <button><a href='/roasted/'>Roasts</a></button>
+        <a href='/'><button>All Posts</button></a>
+        <a href='/boasted/'><button>Boasts</button></a>
+        <a href='/roasted/'><button>Roasts</button></a>
     </div>
     <h4>Sort By:</h4>
     <div>
@@ -28,6 +28,7 @@
             <p> <button><a href='/upvote/{{item.id}}'>Upvote:</a></button> {{item.total_votes}} <button><a
                         href='/downvote/{{item.id}}'>Downvote:</a></button>
                 {{item.post_time}}</p>
+            <p>{{item.secret_code}}</p>
         </div>
         {% endfor %}
 
